--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,17 @@ body {
   color: white;
   background-image: url(../img/oldman.png);
   background-size: 40%;
-  background-position: 110% 110%;
+  background-position: 105% 110%;
   background-repeat: no-repeat;
-
-
+  padding-left: 65px;
 }
 .page-main {
 background-color: green;
+height: 150px;
+background-color: lightgrey;
 }
 .page-footer {
-  background-color: #d3d3d3;
+  background-color: green;
 }
 .header-nav {
   width: 85%;
@@ -52,7 +53,7 @@ background-color: green;
   float:left;
 }
 .header-nav-right {
-  float:right;
+  float: right;
 }
 .logo-link {
   margin-right: 12px;
@@ -60,7 +61,7 @@ background-color: green;
 }
 .bannerone {
   position: relative;
-  width: 85%;
+  width: 90%;
   height: 370px;
   margin: 0;
 }
@@ -68,7 +69,7 @@ background-color: green;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  left: 170px;
+  left: 160px;
   width: 35%;
 }
 .testo-bannerone h1 {
@@ -88,3 +89,27 @@ background-color: green;
 .button-green {
  color:white;
  }
+.login {
+  border-radius: 5px;
+  border-style: solid ;
+  padding: 10px 35px ;
+}
+.button-first {
+  padding: 20px;
+  text-decoration: none;
+  display: inline-block;
+  line-height: 1px;
+  border-radius: 5px;
+  color: white;
+  text-transform: uppercase;
+  background-color: #7cbb02;
+}
+h1 {
+  text-align: center;
+  padding-top: 50px;
+}
+h2 {
+  text-align: center;
+  font-size: 23px;
+  color: #6A6C6E;
+}
