--- a/css/style.css
+++ b/css/style.css
@@ -15,15 +15,6 @@ body {
   background-size: 40%;
   background-position: 105% 110%;
   background-repeat: no-repeat;
-
-}
-.page-main {
-background-color: green;
-height: 150px;
-background-color: lightgrey;
-}
-.page-footer {
-  background-color: green;
 }
 .header-nav {
   width: 85%;
@@ -32,9 +23,9 @@ background-color: lightgrey;
   line-height: 80px;
   text-transform: uppercase;
 }
-.hader-nav::after{
-  content: '';
-  display: table;
+.header-nav::after{
+  content:'';
+  display:table;
   clear:both;
 }
 .list-inlene {
@@ -51,13 +42,20 @@ background-color: lightgrey;
 }
 .header-nav-left {
   float:left;
+  width: 50%;
+  background-color: red;
 }
 .header-nav-right {
   float: right;
+  width: 50%;
+  background-color: green;
 }
 .logo-link {
   margin-right: 12px;
-
+}
+.titoli {
+background-color: lightgrey;
+height:150px;
 }
 .bannerone {
   position: relative;
@@ -107,6 +105,7 @@ background-color: lightgrey;
 .primo-titolo{
   text-align: center;
   padding-top: 50px;
+  margin-bottom: 10px;
 }
 h2 {
   text-align: center;
@@ -118,28 +117,136 @@ h2 {
 }
 .left {
   width: 33.3%;
-  background-color: black;
   height: 300px;
+  background-image: url(../img/profile.png);
+  background-repeat: no-repeat;
+  background-position: center;
   }
 .center {
   width: 33.3%;
-  background-color: blue;
   height: 300px;
-  position:
+  background-image: url(../img/computer.png);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .right {
   width: 33.3%;
-  background-color: yellow;
   height: 300px;
+  background-image: url(../img/doc.png);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .central::after {
   content: '';
   display: table;
   clear: both;
 }
-/* .left {
-  float:left; */
-  }
-/* .central {
-  float: right;
-} */
+.left {
+  float:left;
+}
+.center {
+  float: left;
+}
+.right {
+  float: left;
+}
+.text::after{
+  content: '';
+  display: table;
+  clear: both;
+}
+.left-text {
+  float: left;
+  width: 33.3%;
+  height: 300px;
+}
+.center-text {
+  float: left;
+  width: 33.3%;
+  height: 300px;
+}
+.right-text {
+  float: left;
+  width: 33.3%;
+  height: 300px;
+}
+h3 {
+  text-align: center;
+  font-size: 24px;
+  margin-top: 20px;
+  color: lightgreen;
+  width: 55%;
+  margin-left: 20%;
+}
+.min {
+  width: 10%;
+  margin-left: 42%;
+  margin-top: 50px;
+}
+.text-bottom::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.left-text-bottom {
+  float:left;
+  width: 33.3%;
+  height: 300px;
+  text-align: center;
+  font-size: 25px;
+  color: grey;
+}
+.center-text-bottom {
+  float: left;
+  width: 33.3%;
+  height: 300px;
+  text-align: center;
+  font-size: 25px;
+  color: grey;
+}
+.right-text-bottom {
+  float: left;
+  width: 33.3%;
+  height: 300px;
+  text-align: center;
+  font-size: 25px;
+  color: grey;
+}
+.final-main::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.col-sx {
+  float: left;
+  width: 50%;
+  height: 900px;
+  background-image: url(../img/mountain.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 50px;
+}
+.col-dx{
+  float: left;
+  width: 50%;
+  height: 900px;
+
+}
+h4 {
+  font-size: 50px;
+  margin-top: 7%;
+  width: 70%;
+  margin-bottom: 20px;
+}
+p {
+  width: 70%;
+  font-size: 25px;
+  color: grey;
+  margin-bottom: 50px;
+}
+a{
+  color: blue;
+}
+
+}
