--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ body {
   background-color: white;
   font-family: sans-serif;
 }
+main {
+  padding: 5% 5%;
+}
 .page-header {
   background-color: #0c325a;
   height: 450px;
